--- a/08_Spring_Web_MVC/pom.xml
+++ b/08_Spring_Web_MVC/pom.xml
@@ -17,5 +17,14 @@
             <version>6.2.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>6.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
 </project>
